WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
77235
Illegal panner model values should throw an exception
https://bugs.webkit.org/show_bug.cgi?id=77235
Summary
Illegal panner model values should throw an exception
Raymond Toy
Reported
2012-01-27 12:45:52 PST
Currently illegal values for the panner panningModel are silently accepted. We should probably throw an exception for invalid values.
Attachments
Patch
(7.38 KB, patch)
2012-02-01 13:49 PST
,
Raymond Toy
no flags
Details
Formatted Diff
Diff
Patch
(8.21 KB, patch)
2012-02-01 14:19 PST
,
Raymond Toy
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Raymond Toy
Comment 1
2012-02-01 13:49:21 PST
Created
attachment 125008
[details]
Patch
Raymond Toy
Comment 2
2012-02-01 14:19:00 PST
Created
attachment 125013
[details]
Patch
Raymond Toy
Comment 3
2012-02-01 14:21:07 PST
Sorry. I forgot to update the test expectations because the panner-set-model test no longer crashes on debug builds.
Chris Rogers
Comment 4
2012-02-01 14:23:34 PST
Looks good assuming bots pass.
Kenneth Russell
Comment 5
2012-02-02 08:25:32 PST
Comment on
attachment 125013
[details]
Patch rs=me
Raymond Toy
Comment 6
2012-02-02 09:21:38 PST
Comment on
attachment 125013
[details]
Patch Thanks for the review!
WebKit Review Bot
Comment 7
2012-02-02 12:29:36 PST
Comment on
attachment 125013
[details]
Patch Clearing flags on attachment: 125013 Committed
r106579
: <
http://trac.webkit.org/changeset/106579
>
WebKit Review Bot
Comment 8
2012-02-02 12:29:42 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug