Illegal panner model values should throw an exception https://bugs.webkit.org/show_bug.cgi?id=77235

Patch by Raymond Toy <rtoy@google.com> on 2012-02-02
Reviewed by Kenneth Russell.

Source/WebCore:

Modified existing panner-set-model test to catch exceptions.
Debug build should not crash anymore.

* webaudio/AudioPannerNode.cpp:
(WebCore::AudioPannerNode::setPanningModel):  Throw exception for
invalid model values.
* webaudio/AudioPannerNode.h:
(AudioPannerNode): Update declaration
* webaudio/AudioPannerNode.idl: Setting panner model can throw
exception.

LayoutTests:

* webaudio/panner-set-model-expected.txt: Updated.
* webaudio/panner-set-model.html: Catch the errors that are thrown
for invalid panning model values.
* platform/chromium/test_expectations.txt: Remove test that no
longer crashes.

Canonical link: https://commits.webkit.org/94523@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@106579 268f45cc-cd09-0410-ab3c-d52691b4dbfc